Replaced main landing graphic to resolve parallax bug on iphone

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -297,15 +297,15 @@ body {
       background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
-      -webkit-transform: translateZ(-25px) scale(2.9) translateY(-6vw);
-      -moz-transform: translateZ(-25px) scale(2.9) translateY(-6vw);
-      transform: translateZ(-25px) scale(2.9) translateY(-6vw);
+      -webkit-transform: translateZ(-25px) scale(2.9) translateY(-15vw);
+      -moz-transform: translateZ(-25px) scale(2.9) translateY(-15vw);
+      transform: translateZ(-25px) scale(2.9) translateY(-15vw);
       z-index: 0;
 
       @media screen and (max-width: 600px) {
-        -webkit-transform: translateZ(-25px) scale(4) translateY(-6vw);
-        -moz-transform: translateZ(-25px) scale(4) translateY(-6vw);
-        transform: translateZ(-25px) scale(4) translateY(-6vw);
+        -webkit-transform: translateZ(-25px) scale(4) translateY(-15vw);
+        -moz-transform: translateZ(-25px) scale(4) translateY(-15vw);
+        transform: translateZ(-25px) scale(4) translateY(-15vw);
       }
     }
 
